Copyright © 2014 The Crave developers
Copyright © 2012-2014 The NovaCoin developers
Copyright © 2011-2015 The Peercoin developers
Copyright © 2009-2014 The Bitcoin developers

Distributed under the MIT/X11 software license, see the accompanying
file license.txt or http://www.opensource.org/licenses/mit-license.php.
This product includes software developed by the OpenSSL Project for use in
the OpenSSL Toolkit (http://www.openssl.org/).  This product includes
cryptographic software written by Eric Young (eay@cryptsoft.com).


Intro
-----
Profit Hunters Coin (PHC) is a free open source decentralized experimental project derived
from Bitcoin, with the goal of providing a long-term energy-efficient scrypt-based
crypto-currency. Built on the foundations of PPCoin, NovaCoin, CraveProject & Dash, BATA and Crypostle
to help further advance the field of crypto-currency.

v1.0.0.6
--------
* Updated Checkpoints
* Bitcoin Firewall 1.2.2.4
* Masternode manager GUI - Cleanup
* Stake Halving Bug Fixed
* Tesnet Established
* Dark Theme Installed
* Darksend Amounts lowered

v1.0.0.5
--------
* Updated Checkpoints
* Improved Bitcoin Firewall 1.2.2.3
* Fixed GUI Masternode manager (Downloading List...)
* Fixed Large bandwidth usage from certain peers
* Fixed issue with Dynamic Block Reward 3.0

v1.0.0.4
--------
* Updated Checkpoints
* Reformatted Bitcoin Firewall 1.2.2.2 source code
* RPC & phc.conf support added to Bitcoin Firewall
* Fixed masternode status bug when started remotely
* Fixed GUI Start masternode without updating

v1.0.0.3
--------
* Updated Seednodes from current Masternodes
* Updated Checkpoints
* Fixed Core 8 Cnode::nSyncHeight
* Added Firewall logging to debug.log

v1.0.0.2
--------
* Updated Checkpoints
* Improved ForkFix from 1.0.0.1 (net.cpp)

v1.0.0.1
--------
* Bitcoin Firewall 1.2.2
* Fixed chain-forking in Bitcoin Core (net.cpp)

v1.0.0.0
--------
* Dynamic Block Reward 3.0 integration
* First stable release on new codebase
