@@ -312,7 +312,7 @@
           </font>
          </property>
          <property name="text">
-          <string>Debug log file</string>
+          <string>Troubleshooting</string>
          </property>
         </widget>
        </item>
@@ -322,14 +322,40 @@
           <string>Open the PHC debug log file from the current data directory. This can take a few seconds for large log files.</string>
          </property>
          <property name="text">
-          <string>&amp;Open</string>
+          <string>&amp;Debug.log</string>
          </property>
          <property name="autoDefault">
           <bool>false</bool>
          </property>
         </widget>
        </item>
-       <item row="16" column="0">
+      <item row="16" column="0">
+        <widget class="QPushButton" name="openPHCConfigfileButton">
+         <property name="toolTip">
+          <string>Open the PHC config file from the current data directory. This can take a few seconds for large log files.</string>
+         </property>
+         <property name="text">
+          <string>&amp;PHC.conf</string>
+         </property>
+         <property name="autoDefault">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+        <item row="17" column="0">
+        <widget class="QPushButton" name="openMNConfigfileButton">
+         <property name="toolTip">
+          <string>Open the Masternode config file from the current data directory. This can take a few seconds for large log files.</string>
+         </property>
+         <property name="text">
+          <string>&amp;Masternode.conf</string>
+         </property>
+         <property name="autoDefault">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="18" column="0">
         <widget class="QLabel" name="labelCLOptions">
          <property name="font">
           <font>
@@ -342,7 +368,7 @@
          </property>
         </widget>
        </item>
-       <item row="17" column="0">
+       <item row="19" column="0">
         <widget class="QPushButton" name="showCLOptionsButton">
          <property name="toolTip">
           <string>Show the PHC-Qt help message to get a list with possible PHC command-line options.</string>
@@ -355,7 +381,7 @@
          </property>
         </widget>
        </item>
-       <item row="18" column="0">
+       <item row="20" column="0">
         <spacer name="verticalSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
