@@ -794,7 +794,7 @@
        </property>
        <property name="icon">
         <iconset resource="../bitcoin.qrc">
-         <normaloff>:/icons/send</normaloff>:/icons/send</iconset>
+         <normaloff>:/icons/send-black</normaloff>:/icons/send-black</iconset>
        </property>
        <property name="default">
         <bool>true</bool>
