@@ -84,7 +84,7 @@
        </property>
        <property name="icon">
         <iconset resource="../bitcoin.qrc">
-         <normaloff>:/icons/address-book</normaloff>:/icons/address-book</iconset>
+         <normaloff>:/icons/address-book-black</normaloff>:/icons/address-book-black</iconset>
        </property>
        <property name="shortcut">
         <string>Alt+A</string>
