@@ -46,6 +46,10 @@ private slots:
     void on_tabWidget_currentChanged(int index);
     /** open the debug.log from the current datadir */
     void on_openDebugLogfileButton_clicked();
+    /** open the phc.conf from the current datadir */
+    void on_openPHCConfigfileButton_clicked();
+    /** open the masternode.conf from the current datadir */
+    void on_openMNConfigfileButton_clicked();
     /** display messagebox with program parameters (same as bitcoin-qt --help) */
     void on_showCLOptionsButton_clicked();
     /** change the time range of the network traffic graph */
